[package]
name = "serde-gron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
serde = "1"
bool_ext = "0.5"
thiserror = "1"
regex = "1"
once_cell = "1"
num = "0.4"

[dev-dependencies]
serde_test = "1"
