[package]
name = "serde-gron"
description = "Provides serialize/deserialize of serde in gron format."
version = "0.1.2"
authors = ["masinc <masinc000@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["gron", "serde", "serialization"]
categories = ["encoding", "parser-implementations"]
repository = "https://github.com/masinc/serde-gron"


[dependencies]
serde_json = "1"
serde = "1"
bool_ext = "0.5"
thiserror = "1"
regex = "1"
once_cell = "1"
num = "0.4"
colored = "2"

[dev-dependencies]
serde_test = "1"
